kubernetes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rental-mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rental-mysql
  template:
    metadata:
      labels:
        app: rental-mysql
    spec:
      containers:
      - name: rental-mysql-container
        image: mysql:8.0
        ports:
        - containerPort: 3306
        livenessProbe:
          exec:
            command:
            - mysqladmin
            - ping
            - -h
            - localhost
            - -u
            - root
            - -proot_password
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: rental-mysql-service
spec:
  type: ClusterIP
  selector:
    app: rental-mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-service
  template:
    metadata:
      labels:
        app: php-service
    spec:
      containers:
      - name: php-service-container
        image: tonio/php-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  type: ClusterIP
  selector:
    app: php-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rental-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rental-service
  template:
    metadata:
      labels:
        app: rental-service
    spec:
      containers:
      - name: rental-service-container
        image: tonio/rental-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rental-service
spec:
  type: LoadBalancer
  selector:
    app: rental-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
